# bookbuddy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
bookbuddy/: __init__.py  data_generator.py  llm_agent.py  recommendation_engine.py  visual_search.py
scripts/: download_covers.py
templates/: virtual_library.html
