[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookbuddy"
version = "0.1.0"
description = "AI-Powered Library Recommendation System"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "moondream>=0.2.0",
    "numpy>=1.24.0",
    "openai>=1.12.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "loguru>=0.7.0",
]


[tool.setuptools.packages.find]
include = ["bookbuddy*"]
